# raia-app

./: CMakeLists.txt  README.md
src/: raia_app.c  raia_app.h
src/static/: static_header.c  static_header.h
src/util/: util_string.h
src/wrapper/: wrapper_glfw.c
